tests/unit/macho/x64/snapshots/unit__macho__x64__test_rpath__rpath_add@ls-2.snap
---
source: tests/unit/macho/x64/test_rpath.rs
expression: changed_macho.rpaths
---
[
    "path_graf",
    "abababababababababababaabbababababababababab",
]
